--- a/demo3/package.json
+++ b/demo3/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "demo0",
+  "name": "demo3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"webpack --mode development"
+    "dev":"webpack-dev-server --open",
+    "build":"webpack -p"
   },
   "author": "",
   "license": "ISC"
